# terraform-rbi-compliance-scanner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  scan.yml
docs/: ARCHITECTURE.md  RULES.md
examples/compliant_infra/: main.tf
examples/sample_infra/: main.tf
examples/teacher_demo/: access_control.tf  audit_logging.tf  data_localization.tf  encryption.tf  network_exposure.tf
src/compliance_scanner/: __init__.py  cli.py
src/compliance_scanner/engine/: __init__.py  scan_engine.py
src/compliance_scanner/parser/: __init__.py  cache.py  suppressions.py  terraform_parser.py
src/compliance_scanner/reporting/: __init__.py  json_reporter.py
src/compliance_scanner/rules/: __init__.py  access_control.py  audit_logging.py  base.py  data_localization.py  encryption.py  network_exposure.py
tests/: test_large_scan.py  test_parser.py  test_suppressions.py
tests/test_rules/: test_access_control.py  test_audit_logging.py  test_data_localization.py  test_encryption.py  test_network_exposure.py
