[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbi-compliance-scanner"
version = "0.2.0"
description = "Terraform static analysis for RBI/DPDPA compliance requirements"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Swayam" }
]
requires-python = ">=3.10"
dependencies = [
    "python-hcl2>=4.3.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Development Status :: 3 - Alpha",
]

[project.urls]
Repository = "https://github.com/swayam-crypto/terraform-rbi-compliance-scanner"

# This creates a real terminal command after install: `rbi-scan --path ./infra`
# instead of requiring PYTHONPATH tricks and python -m
[project.scripts]
rbi-scan = "compliance_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
